Implement sunset library

--- a/firmware/webapp/src/index.html
+++ b/firmware/webapp/src/index.html
@@ -36,6 +36,10 @@
             <input type="url" name="url" id="url" placeholder="url">
             <input type="submit" type="button" value="trigger OTA" id="triggerOta">
         </form>
+        <div>
+            <button id="switchOta" type="button">Switch OTA partition</button>
+            <pre id="switchOtaResult"></pre>
+        </div>
     </div>
     <div class="container-fluid mb-3">
         <h2 class="mb-1">Config Explorer (Debug)</h2>
