Implemented ota animation & optimizations

--- a/firmware/webapp/src/index.html
+++ b/firmware/webapp/src/index.html
@@ -25,7 +25,7 @@
 <div class="container-fluid mt-3">
     <div class="container mb-3 mt-1 d-flex justify-content-between">
         <div>
-            <h1>WS2812B-Clock <span class="badge bg-danger" id="online">Offline</span></h1>
+            <h1><span id="deviceName">WS2812B-Clock</span> <span class="badge bg-danger" id="online">Offline</span></h1>
             <p>Control your WS2812-Clock via this web interface.</p>
         </div>
         <div class="mt-3">
